test/test_suite/errors/error_semantic_fails.c3
errtype Repeater
{
    A,
    A // #error: This enum constant is declared twice.
}
